# ArtaBazel

./: BUILD.bazel  WORKSPACE.bazel
.github/workflows/: main.yml
projects/Calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/LevelsAPI/: BUILD.bazel
projects/PythonApp/: BUILD.bazel  main.py
projects/python_web_app/: BUILD.bazel  python_web_app.py
